Fixed bugs, cleaned up some code in auth-service & api-gateway